--- a/src/makefile
+++ b/src/makefile
@@ -4,11 +4,13 @@ NAME 	   	:= Modelos Bordes Imágenes
 VERSION		:= 1.0
 DEVELOPERS	:= Reinaldo Barrera Travieso, Ariel Plasencia Díaz
 COPYRIGHT  	:= Copyright © 2021: $(DEVELOPERS)
-UI_FILES    := main_window edge_param gauss_param threshold_param
+UI_FILES	:= main_window edge_param gauss_param threshold_param
+
+compiling: ##Compile some files :)
+	for ui_file in $(UI_FILES); do pyuic5 -x ./UiForm/$${ui_file}.ui -o ./PyUi/$${ui_file}_ui.py; done
 
 run: ## Open the app desktop ;)
 	if ls .temp; then rm -r .temp*; else mkdir .temp; fi
-	for ui_file in $(UI_FILES); do pyuic5 -x ./UiForm/$${ui_file}.ui -o ./PyUi/$${ui_file}_ui.py; done
 	python3 main.py
 	rm -r .temp
 
