--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "run",
             "type": "shell",
-            "command": "make",
+            "command": "cd src; make clean; make compiling; make run",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
