--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,7 @@ NAME 	   	:= Modelos Bordes Imágenes
 VERSION		:= 1.0
 DEVELOPERS	:= Reinaldo Barrera Travieso, Ariel Plasencia Díaz
 COPYRIGHT  	:= Copyright © 2021: $(DEVELOPERS)
-UI_FILES	:= main_window edge_param gauss_param threshold_param about_app about_authors
+UI_FILES	:= main_window edge_param gauss_param threshold_param about_app about_authors present
 
 compiling: ##Compile some files :)
 	for ui_file in $(UI_FILES); do pyuic5 -x ./UiForm/$${ui_file}.ui -o ./PyUi/$${ui_file}_ui.py; done
