--- a/src/makefile
+++ b/src/makefile
@@ -6,11 +6,14 @@ DEVELOPERS	:= Reinaldo Barrera Travieso, Ariel Plasencia Díaz
 COPYRIGHT  	:= Copyright © 2021: $(DEVELOPERS)
 UI_FILES	:= main_window edge_param gauss_param threshold_param about_app about_authors present
 
-compiling: ##Compile some files :)
+compile: ##Compile some files :)
 	for ui_file in $(UI_FILES); do pyuic5 -x ./UiForm/$${ui_file}.ui -o ./PyUi/$${ui_file}_ui.py; done
+	python3 Utils/remove_character.py
 
 run: ## Open the app desktop ;)
+	if ls .temp; then rm -r .temp*; else mkdir .temp; fi
 	python3 main.py
+	rm -rf .temp
 
 info: ## Display project description
 	@echo "$(NAME) v$(VERSION)"
@@ -27,7 +30,7 @@ clean: ## Remove temporary files
 	rm -rf PyForm/__pycache__/
 	rm -rf PyUi/__pycache__/
 	rm -rf Utils/__pycache__/
-	rm .temp/*
+	rm -rf .temp/*
 
 help: ## Show this help
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
